# application/src/main/java/com/trading/control/application/domain/model/instrument/InstrumentSearchQuery.java
@@ -1,0 +1,10 @@
+package com.trading.control.application.domain.model.instrument;
+
+public record InstrumentSearchQuery(String exchangeCode,
+                                    String marketCode,
+                                    String searchText,
+                                    String baseAssetCode,
+                                    String quoteAssetCode,
+                                    Integer limit,
+                                    String cursor) {
+}
